; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/bios/extr_base.c_nouveau_bios_rd32.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/bios/extr_base.c_nouveau_bios_rd32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i32 }
%struct.nouveau_bios = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nouveau_object*, i64)* @nouveau_bios_rd32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nouveau_bios_rd32(%struct.nouveau_object* %0, i64 %1) #0 {
  %3 = alloca %struct.nouveau_object*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.nouveau_bios*, align 8
  store %struct.nouveau_object* %0, %struct.nouveau_object** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.nouveau_object*, %struct.nouveau_object** %3, align 8
  %7 = bitcast %struct.nouveau_object* %6 to i8*
  %8 = bitcast i8* %7 to %struct.nouveau_bios*
  store %struct.nouveau_bios* %8, %struct.nouveau_bios** %5, align 8
  %9 = load %struct.nouveau_bios*, %struct.nouveau_bios** %5, align 8
  %10 = getelementptr inbounds %struct.nouveau_bios, %struct.nouveau_bios* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = load i64, i64* %4, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  %14 = call i32 @get_unaligned_le32(i32* %13)
  ret i32 %14
}

declare dso_local i32 @get_unaligned_le32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
